# ralsei

./: .gitignore  Cargo.toml  Cargo.toml.old  ctr-common-1.pem  flake.nix  readme.md  shell.nix  todo  wiiu-common-1.pem
.direnv/: flake-profile  flake-profile.rc
.direnv/flake-inputs/: 212pjpnz9830g7ya6krw2pv68cb04psj-source  zyadcf8nvgg2v5542sbcqfy420bcq990-source
.github/workflows/: main.yml
docs/: Makefile  headers.md  nn-curl  readme.md  types.md
docs/src/: index.md  types.md
docs/src/formats/: gfmodel.md
docs/src/servers/: account.md  headers.md
examples/: account_client.rs
examples/account-client/: Cargo.toml
examples/account-client/src/: main.rs
keypairs/: Cargo.toml
keypairs/src/: ctr-common-1.pkcs12  lib.rs  wup-account-1.pkcs12
model/: Cargo.toml
model/src/: certificate.rs  lib.rs  network.rs  server.rs
model/src/console/: common.rs  n3ds.rs  wiiu.rs
model/src/title/: id.rs  version.rs
nix/: default.nix  sources.json
scripts/: nn-curl
service/account/: Cargo.toml
service/account/src/: client.rs  common.rs  lib.rs
service/account/src/xml/: agreement.rs  error.rs  errors.rs  mapped_id.rs  mod.rs  timezone.rs  timezones.rs
src/: internal.rs  lib.rs
src/client/: account.rs  mod.rs
src/keypairs/: ctr-common-1.crt.pem  ctr-common-1.key.pem  mod.rs  wiiu-common-1.crt.pem  wiiu-common-1.key.pem  wup-common-1.key.der  wup-common-1.pkcs12
src/model/: certificate.rs  mod.rs  network.rs  server.rs
src/model/console/: common.rs  mod.rs  n3ds.rs  wiiu.rs
src/model/protocol/: mod.rs
src/model/title/: id.rs  mod.rs  title_id.rs  version.rs
src/model/xml/: agreement.rs  conversion.rs  error.rs  error_xml.rs  errors.rs  mod.rs
util/: Cargo.toml
util/src/: builder.rs  lib.rs  misc.rs
util/src/xml/: errors.rs  framework.rs  helpers.rs  mod.rs
