[package]
name = "ralsei"
description = "the fluffiest nintendo network library to exist!"
version = "0.1.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
readme = "https://github.com/superwhiskers/ralsei/blob/master/readme.md"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "ralsei"
test = true

[features]
default = ["client", "mii-renderer"]

client = ["tokio", "quick-xml", "ring", "rustls", "futures", "hyper", "hyper-rustls", "parking_lot"]
mii-renderer = ["vulkano"]

[dependencies]
thiserror = "^1.0"
serde = "^1.0"
byteorder = "^1.0"
num-derive = "^0.3"
num-traits = "^0.2"
isolanguage-1 = "^0.1"
isocountry = "^0.2"
num_x = "^0.2"
strum = "^0.18"
strum_macros = "^0.18"
bitflags = "^1.0"
http = "^0.2"
webpki = "^0.21"
rustls = { version = "^0.17", optional = true }

# dependencies needed by client
tokio = { version = "^0.2", features = ["full"], optional = true }
quick-xml = { version = "^0.18", optional = true }
ring = { version = "^0.16", optional = true }
futures = { version = "^0.3", optional = true }
hyper = { version = "^0.13", optional = true }
hyper-rustls = { version = "^0.20", optional = true }
parking_lot = { version = "^0.10", features = ["nightly"], optional = true }

# dependencies needed by mii-renderer
vulkano = { version = "^0.19", optional = true }
