[package]
name = "ralsei"
description = "the fluffiest nintendo network library to exist!"
version = "0.1.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
readme = "https://github.com/superwhiskers/ralsei/blob/master/readme.md"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "ralsei"
test = true

[features]
default = ["client", "mii-renderer"]

client = ["tokio", "hyper-tls", "futures", "hyper", "tokio-tls", "parking_lot", "native-tls"]
mii-renderer = ["vulkano"]

[dependencies]
thiserror = "^1.0"
num-derive = "^0.3"
num-traits = "^0.2"
isolanguage-1 = "^0.2"
isocountry = "^0.2"
num_x = "^0.2"
strum = "^0.20"
strum_macros = "^0.19"
bitflags = "^1.0"
http = "^0.2"
base64 = "^0.13"
chrono = "^0.4"
deadpool = "^0.6"
async-trait = "^0.1"
quick-xml = "^0.20"

# dependencies needed by client
tokio = { version = "^0.3", features = ["full"], optional = true }
futures = { version = "^0.3", optional = true }
hyper = { version = "^0.13", optional = true }
parking_lot = { version = "^0.11", features = ["nightly"], optional = true }
hyper-tls = { version = "^0.4", optional = true }
native-tls = { version = "^0.2", optional = true }
tokio-tls = { version = "^0.3", optional = true }

# dependencies needed by mii-renderer
vulkano = { version = "^0.19", optional = true }

[dev-dependencies]
clap = { version = "^2.33", features = ["color"] }
