cargo-features = ["strip"]

[workspace]
members = [
  "util",
  "keypairs",
  "model",

  "service/account",

  # "protocol/rmc",
  # "protocol/prudp-v0",
  # "protocol/prudp-v1",
  # "protocol/prudp-lite",

  "examples/account-client",
]

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"
