[package]
name = "ralsei-model"
description = "datatype models used by the rest of the ralsei ecosystem"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
readme = "https://github.com/superwhiskers/ralsei/blob/master/model/readme.md"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "ralsei_model"
test = true

[dependencies]
thiserror = "^1.0"
num-derive = "^0.3"
num-traits = "^0.2"
isolanguage-1 = "^0.2"
isocountry = "^0.3"
num_x = "^0.2"
strum = "^0.20"
strum_macros = "^0.20"
bitflags = "^1.0"
http = "^0.2"
base64 = "^0.13"
chrono = "^0.4"

[dependencies.ralsei-util]
path = "../util"
version = "^0.0.0"
