[package]
name = "ralsei-model"
description = "datatype models used by the rest of the ralsei ecosystem"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
readme = "readme.md"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "ralsei_model"
test = true

[dependencies]
thiserror = "1"
num-derive = "0.3"
num-traits = "0.2"
strum = "0.21"
strum_macros = "0.21"
bitflags = "1"
http = "0.2"
base64 = "0.13"
iso = "0"
isocountry = "0.3"
unin = "0"

[dependencies.hyper]
version = "0.14"
features = ["http1", "stream", "runtime", "client"]

[dependencies.ralsei-util]
path = "../util"
version = "0"
