[package]
name = "ralsei-util"
description = "utility functions and macros for the rest of the ralsei ecosystem"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
readme = "https://github.com/superwhiskers/ralsei/blob/master/util/readme.md"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "ralsei_util"
test = true

[dependencies]
deadpool = "^0.7"
async-trait = "^0.1"
quick-xml = "^0.20"
thiserror = "^1.0"
strum = "^0.20"
strum_macros = "^0.20"
