[package]
name = "ralsei-util"
description = "utility functions and macros for the rest of the ralsei ecosystem"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
readme = "readme.md"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "ralsei_util"
test = true

[dependencies]
deadpool = "0.8"
async-trait = "0.1"
quick-xml = "0.22"
thiserror = "1"
strum = "0.21"
strum_macros = "0.21"
