[package]
name = "account-client"
description = "a simple example of an account server client for the ralsei library"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/ralsei"
keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
base64 = "^0.13"
isolanguage-1 = "^0.2"
isocountry = "^0.3"

#TODO(superwhiskers): consider removing unnecessary features

[dependencies.tokio]
version = "^1"
features = ["full"]

[dependencies.clap]
version = "^2.33"
features = ["color"]

[dependencies.parking_lot]
version = "^0.11"
features = ["nightly"]

[dependencies.ralsei-service-account]
path = "../../service/account"
version = "^0"

[dependencies.ralsei-model]
path = "../../model"
version = "^0"
